# bipolarization

./: README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: publish.yml
polarization/: DOCUMENTATION.md  __init__.py  scores.py  visualization.py  weights.py
