[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bipolarization"
version = "0.1.1"
description = "Detect and quantify polarization and consensus in survey data using weighted kernel scoring and bootstrap inference."
readme = "polarization/DOCUMENTATION.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["polarization", "consensus", "survey", "social-science", "statistics", "bootstrap"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest", "build", "twine"]

[tool.hatch.build.targets.wheel]
packages = ["polarization"]
